tt-rss.css
/* ... */
table.main td.footer {
	border-width : 1px 0px 0px 0px;
	border-style : solid;
	border-color : #88b0f0;
	padding : 10px;
	text-align : center;
	font-size : x-small;
	background-image : url("images/footer.png");
	background-position : top left;
	background-repeat : repeat-x; 
	background-color : white;
	color : gray;
}

table.main td.footer a {
	color : gray;
}

table.main td.footer a:hover {
	color : #4684ff;
}

table.main td.headlines {
	height : 25%;
	border-width : 0px 0px 1px 1px;
	border-style : solid;
	border-color : #88b0f0;
}

table.main td.headlines2 {
	height : 100%;
	border-width : 0px 0px 0px 1px;
	border-style : solid;
	border-color : #c0c0c0;
}

table.main td.content {
	height : 100%;
	border-width : 0px 0px 0px 1px;
	border-style : solid;
	border-color : #88b0f0;
}

table.main td.prefContent {
	height : 100%;
	background-image : url("images/prefs-content.png");
	background-position : top left;
	background-repeat : repeat-x;
	border-width : 1px 0px 0px 0px;
	border-style : solid;
	border-color : #88b0f0;
	padding : 20px;
	background-color : white; 
}

div.postReply {
	padding : 10px;
}

div.postReply a {
	color : #4684ff;
}

div.postReply a:hover {
	color : black;
}

div.postReply div.postHeader {
	background : #ecf4ff;
	border : 1px solid #88b0f0;
}

div.postReply > div.postHeader {
	padding : 5px;
}

div.postReply div.postContent {
	padding : 10px;
}

div.postReply div.postIcon {
	float : right;
	border : 0px;
	margin : 10px 0px 10px 10px;
}

ul.feedList {
	list-style-type : none;
	margin : 5px;
	padding : 0px 0px 0px 10px;
	font-size : small;
}

ul.feedList li.feedCat {
	margin : 0px;
	padding : 3px 0px 3px 0px;
	color : #707070;
	font-size : small;
}

ul.feedList li.feedCat a {
	color : #707070;
}

ul.feedList li.feedCat a:hover {
	color : #4684ff;
}

ul.feedCatList {
	list-style-type : none;
	margin : 0px 0px 0px 20px;
	padding : 0px;  
}

ul.feedCatList li {
	margin : 0px;
	padding : 0px 0px 0px 0px;
	color : black;
}

ul.feedList li {
	margin : 0px;
}

li.feedUnread, 
li.errorUnread, 
li.labelUnread, 
li.virtUnread,
li.tagUnread {
	font-weight : bold;
}

li.errorSelected a,
li.error a,
li.errorUnread a,
li.errorUnreadSelected a {
	color : #f04040;
}

li.feedSelected a,
li.labelSelected a,
li.virtSelected a,
li.tagSelected a {
	color : #4684ff;
}

li.feedUnreadSelected a,
li.labelUnreadSelected a,
li.virtUnreadSelected a,
li.tagUnreadSelected a {
	color : #4684ff;
}

li.feedUnreadSelected,
li.errorUnreadSelected,
li.labelUnreadSelected,
li.virtUnreadSelected,
li.tagUnreadSelected {
	font-weight : bold;
}

li.feed {
	display : block;
}

ul.feedList img, img.tinyFeedIcon {
	margin : 0px 3px 0px 0px;
	width : 16px;
	height : 16px;
	border-width : 0px;
}

h1 {
	font-size : 16pt;       
}

h2 {
	font-size : 14pt;
	font-weight : bold;
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #ecf4ff;
}

h3 {
	font-size : 12pt;
	font-weight : bold;
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #ecf4ff;
}

hr {
	border-width : 0px 0px 1px 0px;
	border-style : dashed;
	border-color : #e0e0e0;
}

a {
	color : black;
	text-decoration : none;
}

a:hover {
	color : #4684ff;
}

#piggie {
	width : 400;
	height : 400;
	right : 0;
	top : -400;
	background-color : white;
	display : none;
	z-index : 999;
	background-image : url("images/piggie.png");
	background-position : center center;
	background-repeat : no-repeat;
	position : absolute;
	border : 1px solid pink;        
	margin-left : auto;
	margin-right : auto;
	-moz-border-radius : 10px;
	opacity : 0.8;
}

#iedit_title, #iedit_link, #iedit_regexp, #iedit_descr, #iedit_expr, #iedit_updintl,
#iedit_purgintl, #iedit_ulogin, #iedit_ulevel, #iedit_match, #iedit_feed,
#iedit_fcat, #iedit_filter_action, #iedit_login, #iedit_pass, #iedit_email,
#iedit_parent_feed {
	width : 100%;
	padding-left : 2px;
	background-color : #f0fff0;
}

textarea.iedit {
	width : 100%;
}

input.iedit {
	width : 100%;
	padding-left : 2px;
}

select.iedit {
	width : 100%;
}

input.editbox {
	width : 200px;
	padding-left : 2px;
}

td.notifyBox {
	font-size : 10pt;
	text-align : right;
}

.notify_sm {
	background : #fff7d5;
	border : 1px solid #d7c47a;
	padding : 3px;
	-moz-border-radius : 3px;
	font-size : small;
	text-align : left;
	padding : 3px 20px 3px 20px;
	text-align : center;
	float : left;
	min-width : 20%;
	position : absolute;
	left : 2px;
	top : 2px;
	display : none;
}

.notify {
	background : #fff7d5;
	border : 1px solid #d7c47a;
	top : 10px;
	right : 35%;
	min-width : 30%;
	position : absolute;	
	display : none;
	float : right;
	font-size : small;
	text-align : center;
	z-index : 999;
	-moz-border-radius : 2px;
	padding : 5px 5px 5px 5px;
}

#dispSwitch {
	padding : 5px 5px 5px 0px;
	font-size : x-small;
	text-align : right;
}

#dispSwitch a {
	color : gray;
}

#dispSwitch a:hover {
	color : #4684ff;
}

div.expPane {
	margin : 15px;
}

iframe {
	border : 0px solid white;
}

iframe.feedsFrameWithActions {
	width : 100%;
	height : 90%;
	margin : 0px;
	padding : 0px;
}

iframe.feedsFrame {
	width : 100%;
	height : 100%;
	margin : 0px;
	padding : 0px;
}

iframe.contentFrame, iframe.headlinesFrame {
	width : 100%;
	padding : 0px;
	margin : 0px;
	height : 100%;
}

/*.button {
	border : 1px solid #d0d0d0;
	background-image : url("images/button.png");
	background-position : top;
	background-repeat : repeat-x;
	background-color : white;
	color : black;  
}

.button:hover {
	background : white;
	text-decoration : none;
	color : black;
}

.disabledButton {
	border : 1px solid #c0c0c0;
	background-color : white;
	color : gray;   
}

a.button {
	padding : 2px 5px 2px 5px;
	font-size : small;
} */

.evenUnreadSelected, .evenSelectedUnread, .evenUnreadSelected td,
	.evenSelectedUnread td {
	background-color : #fff7d5;
	font-weight : bold;
		  border-width : 1px 0px 1px 0px;
		  border-style : solid;
		  border-color : #e7d796;
}
/* ... */

